refactor: cleaned up the code