@@ -1,10 +1,10 @@
 package dev.brodino.everload.sync;
 
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
-// 100% AI generated
+/**
+ * @author Claude
+ */
 public class FileChanges {
 
 	private final List<String> added;
@@ -22,12 +22,11 @@ public class FileChanges {
 	 * @param renamed List of rename operations (formatted as "oldPath -> newPath")
 	 * @param isFreshClone Whether this represents a fresh clone (no previous state)
 	 */
-	public FileChanges(List<String> added, List<String> modified, List<String> deleted,
-					   List<String> renamed, boolean isFreshClone) {
-		this.added = Collections.unmodifiableList(new ArrayList<>(added));
-		this.modified = Collections.unmodifiableList(new ArrayList<>(modified));
-		this.deleted = Collections.unmodifiableList(new ArrayList<>(deleted));
-		this.renamed = Collections.unmodifiableList(new ArrayList<>(renamed));
+	public FileChanges(List<String> added, List<String> modified, List<String> deleted, List<String> renamed, boolean isFreshClone) {
+		this.added = List.copyOf(added);
+		this.modified = List.copyOf(modified);
+		this.deleted = List.copyOf(deleted);
+		this.renamed = List.copyOf(renamed);
 		this.isFreshClone = isFreshClone;
 	}
 
@@ -48,86 +47,27 @@ public class FileChanges {
 		return new FileChanges(allFiles, List.of(), List.of(), List.of(), true);
 	}
 
-	/**
-	 * @return List of file paths that were added
-	 */
-	public List<String> getAdded() {
-		return added;
-	}
+	public List<String> getAdded() { return added; }
+	public List<String> getModified() { return modified; }
+	public List<String> getDeleted() { return deleted; }
+	public List<String> getRenamed() { return renamed; }
 
-	/**
-	 * @return List of file paths that were modified
-	 */
-	public List<String> getModified() {
-		return modified;
-	}
+	public int getAddedCount() { return added.size(); }
+	public int getModifiedCount() { return modified.size(); }
+	public int getDeletedCount() { return deleted.size(); }
+	public int getRenamedCount() { return renamed.size(); }
+	public int getTotalChanges() { return added.size() + modified.size() + deleted.size() + renamed.size(); }
 
-	/**
-	 * @return List of file paths that were deleted
-	 */
-	public List<String> getDeleted() {
-		return deleted;
-	}
-
-	/**
-	 * @return List of rename operations (formatted as "oldPath -> newPath")
-	 */
-	public List<String> getRenamed() {
-		return renamed;
-	}
-
-	/**
-	 * @return true if this represents a fresh clone operation
-	 */
-	public boolean isFreshClone() {
-		return isFreshClone;
-	}
-
-	/**
-	 * @return true if there are any changes (added, modified, deleted, or renamed files)
-	 */
+	public boolean isFreshClone() { return isFreshClone; }
 	public boolean hasChanges() {
 		return !added.isEmpty() || !modified.isEmpty() || !deleted.isEmpty() || !renamed.isEmpty();
 	}
 
-	/**
-	 * @return The total number of file changes across all categories
-	 */
-	public int totalChanges() {
-		return added.size() + modified.size() + deleted.size() + renamed.size();
-	}
-
-	/**
-	 * @return The number of added files
-	 */
-	public int addedCount() {
-		return added.size();
-	}
-
-	/**
-	 * @return The number of modified files
-	 */
-	public int modifiedCount() {
-		return modified.size();
-	}
-
-	/**
-	 * @return The number of deleted files
-	 */
-	public int deletedCount() {
-		return deleted.size();
-	}
-
-	/**
-	 * @return The number of renamed files
-	 */
-	public int renamedCount() {
-		return renamed.size();
-	}
-
 	@Override
 	public String toString() {
-		return String.format("FileChanges{added=%d, modified=%d, deleted=%d, renamed=%d, freshClone=%s}",
-				added.size(), modified.size(), deleted.size(), renamed.size(), isFreshClone);
+		return String.format(
+			"FileChanges{added=%d, modified=%d, deleted=%d, renamed=%d, freshClone=%s}",
+			added.size(), modified.size(), deleted.size(), renamed.size(), isFreshClone
+		);
 	}
 }
